<resources>
    <string name="calibration_thickness_measurement_title">Thickness Measurement Calibration</string>
    <string name="calibration_thickness_measurement_title_abbreviation">Thickness M.Calibration</string>
    <string name="calibration_thickness_measurement_content">The machine will calibrate the thickness measurement system automatically with the calibration target. Redo this calibration after you have reassembled the machine, replaced the toolhead or if you find the thickness measurement is inaccurate.</string>
    <string name="calibration_platfrom_height_title">Platform Height Calibration</string>
    <string name="calibration_central_axis_title">Central Axis Calibration</string>
    <string name="calibration_central_axis_content">For 4-axis machining, you need to locate the central axis of the Rotary Module using a cylinder material. Completing this calibration allows you to start a laser job properly via inputting the material’s diameter.</string>
    <string name="calibration_platfrom_height_content">Calibrate the height of the platform with the laser calibration plate so that you can start a laser job via inputting the material’s thickness.</string>
    <string name="calibration_camera_calibration_title">Camera Calibration</string>
    <string name="calibration_camera_calibration_content">To use Camera Capture in Snapmaker Luban, you need to calibrate the camera. Recalibration is required after you have reassembled the machine or replaced the toolhead.</string>
    <string name="calibration_manual_focus_calibration_title">Manual Focus Calibration</string>
    <string name="calibration_manual_focus_calibration_desc">The Laser Module will engrave a few scale lines at different heights. You need to choose the best engraved line to calibrate the focal length.</string>
    <string name="calibration_manual_tool_setting_title">Manual Tool Setting</string>
    <string name="calibration_manual_tool_setting_content">Set the work origin by manually controlling the toolhead.</string>
    <string name="calibration_manual_tool_setting_advanced_mode_content">Set the work origin by manually controlling the toolhead. You need to move the toolhead to where the work origin will be.</string>
    <string name="calibration_bit_assistant_title">Bit Assistant</string>
    <string name="calibration_bit_assistant_content">Bit Assistant guides you to manipulate the original bit and the new bit to touch the same spot on the material. The machine will work out the Z offset and automatically locate the new work origin. Before proceeding with Bit Assistant, do not detach the original bit.</string>
    <string name="calibration_A400_XY_material">Material:%s</string>
    <string name="all_material_PLA">PLA</string>
    <string name="all_material_PETG">PETG</string>
    <string name="all_material_ABS">ABS</string>
    <string name="calibration_a400_xy_mode_custom">Custom</string>
    <string name="all_material_CUSTOM">Custom Material</string>
    <string name="calibration_leveling_xy_selection_left_temperature_title">Nozzle L: Printing Temp.</string>
    <string name="calibration_leveling_xy_selection_right_temperature_title">Nozzle R: Printing Temp.</string>
    <string name="calibration_leveling_xy_selection_left_stand_by_temperature_title">Nozzle L: Standby Temp. </string>
    <string name="calibration_leveling_xy_selection_right_stand_by_temperature_title">Nozzle R: Standby Temp.</string>
    <string name="calibration_leveling_xy_selection_heated_bed_temperature_title">Heated Bed Temp.</string>
    <string name="calibration_heated_bed_leveing_auto_content">The toolhead will automatically probe and obtain data for specific points on the heated bed to adjust the movement of the two nozzles accordingly during printing.</string>
    <string name="calibration_heated_bed_leveing_manual_content">Manually control the toolhead to probe and obtain data for specific points on the heated bed. The movement of the two nozzles will be adjusted accordingly during printing.</string>
    <string name="calibration_heated_bed_leveling_content_1">Heat Heated Bed and Nozzle (1/2)</string>
    <string name="calibration_heated_bed_leveling_content_2">Calibrate Calibration Points (2/2)</string>
    <string name="calibration_z_leveling_title">Z Offset Calibration</string>
    <string name="calibration_xy_leveling_title">XY Offset Calibration</string>
    <string name="calibration_z_leveling_sensor_calibration_manual_calibrating_content">Manually lower the right nozzle of the toolhead against the 3D printing platform’s surface with the calibration card until you feel slight resistance when you pull out the calibration card, and it should be wrinkled when you push it forward.</string>
    <string name="all_heft">L</string>
    <string name="all_right">R</string>
    <string name="a400_calibration_headted_bed_leveing_gide">Calibrating...%1$d / %2$d</string>
    <string name="a400_calibration_headted_bed_leveing_time">Estimated time %d s. \%%d s left.</string>
    <string name="a400_calibration_headted_bed_leveing_wait_time">Estimated time  s.  s left.</string>
    <string name="calibration_cnc_manual_tool">Manual Tool Setting</string>
    <string name="calibration_cnc_manual_tool_content">You need to move the toolhead to where the work origin will be.</string>
    <string name="calibration_cnc_manual_tool_advanced_mode_content">You need to separately set origin in each orientation, and their combination will be the wor...</string>
    <string name="calibration_cnc_tool_change">Bit Assistant</string>
    <string name="cnc_tool_change_assistant_content">您可以使用换刀助手来进行 Z 原点的设置</string>
    <string name="cnc_tool_change_assistant_content_">Bit Assistant guides you to manipulate the original bit and the new bit to touch the same spot on the material. The machine will work out the Z offset and automatically locate the new work origin. Before proceeding with Bit Assistant, do not detach the original bit.</string>
    <string name="calibration_cnc_origin_assistant_content">For 4-axis machining, you can use Origin Assistant to promptly set work origin, which will be stored in the system. So in future carving sessions, as long as the dimensions of the material remain unchanged, you can select your files and start right away.</string>
    <string name="calibration_auto_content"> The toolhead will automatically probe and obtain data for specific points (%s) on the 3D printing platform to adjust the movement of the two nozzles accordingly during printing.</string>
    <string name="calibration_manual_content">Manually control the toolhead to probe and obtain data for specific points (%s) on the 3D printing platform. The movement of the two nozzles will be adjusted accordingly during printing.</string>
    <string name="yes_all_done">Yes, all done</string>
    <string name="move_show">The machine is moving...</string>
    <string name="move_show_content">Please wait a few seconds.\nIf any emergency occurs, press the Emergency Stop Button immediately.</string>
    <string name="calibration_complete_continue_calibration">Continue Calibration</string>
    <string name="calibration_complete_home_screen">Home Screen</string>
    <string-array name="grid_types">
        <item>3 x 3</item>
        <item>5 x 5</item>
        <item>9 x 9</item>
    </string-array>
    <string name="control_laser_open">The laser will be turned on at 1% power. Ensure that you wear the laser safety goggles or close the Enclosure door.</string>
    <string name="control_cnc_open_title">The spindle of the CNC Module will start working</string>
    <string name="control_cnc_open">Ensure that you wear the CNC safety goggles or close the Enclosure door.</string>
    <string name="printing_toast">The machine is %s...</string>
    <string name="printing_toast_3dp_print">printing</string>
    <string name="printing_toast_other">working</string>
    <string name="all_left_nozzle_temp">Left Nozzle Temp.</string>
    <string name="all_right_nozzle_temp">Right Nozzle Temp.</string>
    <string name="print_warning_filament_run_out_extruder_content">%s is not loaded.\nTo continue printing, tap <b>Load</b> Filament.</string>
    <string name="print_filament_runout_load_filament">Load Filament</string>
    <string name="print_heating_nozzle">Heating the nozzle...</string>
    <string name="print_pull_out_filament_title">Pull out Filament</string>
    <string name="print_pull_out_filament_content">Manullay pull out the filament and insert it into the filament guide tube again until you can feel the filament is gripped and being pulled in.</string>
    <string name="print_insert_filament_title">Insert Filament</string>
    <string name="print_insert_filament_content">Manually insert the new filament into the filament guide tube until you can feel the filament is gripped and being pulled in.</string>
    <string name="print_filament_runout_start_loading">挤出耗材中，过程耗时数秒，请耐心稍候......</string>
    <string name="calibration_leveling_bed_heating">Heating the heated bed and nozzle...</string>
    <string name="calibration_leveling_bed_heating_nozzle_temp_title">Left Nozzle Temp：</string>
    <string name="calibration_leveling_bed_heating_Heated_bed_title">Heated Bed Temp：</string>
    <string name="calibration_leveling_bed_heating_temperature">/%3d℃</string>
    <string name="a400_leveling_bed_calibration_heat_bed">Estimated time %d s. %d s left.</string>
    <string name="calibration_camera_calibration_info_content">Fix a piece of blank and white A4 paper to the center of the laser engraving and cutting platform. The machine will cut a square on the paper to calibrate the camera.</string>
    <string name="calibration_camera_calibration_10w_title">Camera Calibration</string>
    <string name="calibration_platform_height_calibration_10w_title">Platform Height Calibration</string>
    <string name="calibration_complete_thk_measure">Congrats! You have completed the Thickness Measurement Calibration.</string>
    <string name="calibration_platform_height_calibration_10w_content">Place the laser calibration plate on the laser engraving and cutting platform. Manually lower the toolhead towards the calibration plate’s surface until you feel slight resistance when you pull out the calibration plate. Then, tap <b>Save</b>.</string>
    <string name="calibration_platform_height_calibration_10w_complete_title">Completed</string>
    <string name="calibration_platform_height_calibration_10w_complete_content">Congrats! You have completed the Platform Height Calibration.</string>
    <string name="calibration_camera_calibration_10w_2_title">Camera Calibration</string>
    <string name="calibration_camera_calibration_10w_content">Fix Calibration Material (1/2)</string>
    <string name="calibration_camera_calibration_10w_2_content">Auto Calibration (2/2)</string>
    <string name="calibration_camera_calibration_10w_second_title">Fix Calibration Material</string>
    <string name="calibration_thickness_measure_4_1_title">Thickness Measurement Calibration</string>
    <string name="calibration_thickness_measure_4_1_content">Auto Calibration (3/3)</string>
    <string name="calibration_thickness_measure_calibrating">Calibrating...</string>
    <string name="calibration_thickness_measure_verifying">Verifying...</string>
    <string name="calibration_thickness_measure_failed">Calibration Failed</string>
    <string name="calibration_thickness_measure_failed_content">Thickness Measurement Calibration failed. Please retry or quit.</string>
    <string name="calibration_thickness_measure_title">Thickness Measurement Calibration</string>
    <string name="calibration_thickness_measure_second_title">Measure Platform Height </string>
    <string name="calibration_thickness_measure_content">Measure Platform Height (1/3)</string>
    <string name="calibration_thickness_measure_3_1_title">Thickness Measurement Calibration</string>
</resources>